<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">tip-o-matic</string>
    <string name="content_description">guest check form title</string>
    <string name="check_total">Check total ?</string>
    <string name="num999">9999.99</string>
    <string name="tip_percent">Tip percent ?</string>
    <string name="num15">20</string>
    <string name="percentsign">%</string>
    <string name="split_how_many_ways">Split bill among</string>
    <string name="num_1nodecpoint">1</string>
    <string name="amount_to_tip">Tip amount:</string>
    <string name="total_with_tip">Total, with tip:</string>
    <string name="per_person">Each pay:</string>
    <string name="num0">0.00</string>
    <string name="reset">again!</string>
    <string name="zero">0</string>
    
</resources>
